add ignore: test.db

--- a/.gitignore
+++ b/.gitignore
@@ -452,7 +452,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -477,5 +478,6 @@ Temporary Items
 
 # custom gitignore:
 .*
+test.db
 !.gitignore
 !.gitsubmodules
