--- a/framework/summer-parent/pom.xml
+++ b/framework/summer-parent/pom.xml
@@ -29,6 +29,7 @@
 		<logback.version>1.4.6</logback.version>
 		<slf4j.version>2.0.7</slf4j.version>
 		<snakeyaml.version>2.0</snakeyaml.version>
+		<sqlite.version>3.41.2.1</sqlite.version>
 		<tomcat.version>10.1.7</tomcat.version>
 	</properties>
 
@@ -75,6 +76,13 @@
 				<groupId>org.apache.tomcat.embed</groupId>
 				<artifactId>tomcat-embed-core</artifactId>
 				<version>${tomcat.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.xerial</groupId>
+				<artifactId>sqlite-jdbc</artifactId>
+				<version>${sqlite.version}</version>
+				<scope>test</scope>
 			</dependency>
 
 			<dependency>
