--- a/framework/summer-parent/pom.xml
+++ b/framework/summer-parent/pom.xml
@@ -30,6 +30,7 @@
 		<slf4j.version>2.0.7</slf4j.version>
 		<snakeyaml.version>2.0</snakeyaml.version>
 		<sqlite.version>3.41.2.1</sqlite.version>
+		<thymeleaf.version>3.1.1.RELEASE</thymeleaf.version>
 		<tomcat.version>10.1.7</tomcat.version>
 	</properties>
 
@@ -76,6 +77,18 @@
 				<groupId>org.apache.tomcat.embed</groupId>
 				<artifactId>tomcat-embed-core</artifactId>
 				<version>${tomcat.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.tomcat.embed</groupId>
+				<artifactId>tomcat-embed-jasper</artifactId>
+				<version>${tomcat.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.thymeleaf</groupId>
+				<artifactId>thymeleaf</artifactId>
+				<version>${thymeleaf.version}</version>
 			</dependency>
 
 			<dependency>
