--- a/framework/summer-parent/pom.xml
+++ b/framework/summer-parent/pom.xml
@@ -22,7 +22,9 @@
 		<java.version>17</java.version>
 
 		<bytebuddy.version>1.14.2</bytebuddy.version>
+		<freemarker.version>2.3.32</freemarker.version>
 		<hikaricp.version>5.0.1</hikaricp.version>
+		<jackson.version>2.14.2</jackson.version>
 		<jakarta.annotation.version>2.1.1</jakarta.annotation.version>
 		<jakarta.servlet.version>6.0.0</jakarta.servlet.version>
 		<junit.version>5.9.2</junit.version>
@@ -30,7 +32,6 @@
 		<slf4j.version>2.0.7</slf4j.version>
 		<snakeyaml.version>2.0</snakeyaml.version>
 		<sqlite.version>3.41.2.1</sqlite.version>
-		<thymeleaf.version>3.1.1.RELEASE</thymeleaf.version>
 		<tomcat.version>10.1.7</tomcat.version>
 	</properties>
 
@@ -40,6 +41,12 @@
 				<groupId>net.bytebuddy</groupId>
 				<artifactId>byte-buddy</artifactId>
 				<version>${bytebuddy.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson.version}</version>
 			</dependency>
 
 			<dependency>
@@ -74,6 +81,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>org.freemarker</groupId>
+				<artifactId>freemarker</artifactId>
+				<version>${freemarker.version}</version>
+			</dependency>
+
+			<dependency>
 				<groupId>org.apache.tomcat.embed</groupId>
 				<artifactId>tomcat-embed-core</artifactId>
 				<version>${tomcat.version}</version>
@@ -83,12 +96,6 @@
 				<groupId>org.apache.tomcat.embed</groupId>
 				<artifactId>tomcat-embed-jasper</artifactId>
 				<version>${tomcat.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.thymeleaf</groupId>
-				<artifactId>thymeleaf</artifactId>
-				<version>${thymeleaf.version}</version>
 			</dependency>
 
 			<dependency>
