--- a/framework/summer-build/pom.xml
+++ b/framework/summer-build/pom.xml
@@ -12,5 +12,6 @@
         <module>../summer-aop</module>
         <module>../summer-jdbc</module>
         <module>../summer-web</module>
+        <module>../summer-boot</module>
     </modules>
 </project>
