--- a/step-by-step/aop-test/pom.xml
+++ b/step-by-step/aop-test/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.itranswarp.summer</groupId>
-	<artifactId>aop-test</artifactId>
+	<artifactId>proxy-resolver</artifactId>
 	<version>1.0</version>
 
 	<properties>
